--- a/Reading_Digital_Image.ipynb
+++ b/Reading_Digital_Image.ipynb
@@ -16,7 +16,7 @@
         "id": "hzdUdJhk3no1"
       },
       "source": [
-        "Importing the libraries openCV and Matplotlib for reading and plotting images\n"
+        "Importing the libraries openCV, and Matplotlib for reading and plotting images\n"
       ]
     },
     {
